# nanoTriton

./: .gitignore  README.md  demo.py  pyproject.toml
examples/: matmul.py  vector_add.py
gpucc/: __init__.py  annotations.py  ir.py  ir_printer.py  types.py
gpucc/codegen/: ptx_emit.py  regalloc.py
gpucc/frontend/: ast_to_ir.py  decorator.py
gpucc/runtime/: cupy_runner.py
gpucc/transforms/: __init__.py  coalesce_check.py  constant_fold.py  dce.py  loop_unroll.py
notebooks/: gpu_validation.ipynb
tests/: test_codegen.py  test_frontend.py  test_integration.py  test_transforms.py  test_types.py
